--- a/TEMPLATE/Views/Association/RapportQuantite.cshtml
+++ b/TEMPLATE/Views/Association/RapportQuantite.cshtml
@@ -5,8 +5,6 @@
 }
 <div class="main-panel">
  <div class="container">
-
-
     <div class="panel-header bg-primary-gradient">
        <div class="page-inner py-3">
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
@@ -36,18 +34,46 @@
 </div>
 </div>
 <div class="card-body rec-pat" >
+    
+    
   <div class="container-fluid">
       <div class="row">
     <div class="col-md-12" id="containerAssociationQuantite"></div>
+   
+    
     
 </div>
+       
+       <p>
+        
+   @using (Html.BeginForm("RapportQuantite", "Association", FormMethod.Post))
+   {
+    <div class="row">
+        <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <h2 style="color:blue">Date de début</h2>
+            <input type="datetime-local" name="startDate"  id="startDate" class="form-control total" />
+            </article>
+                           
+        <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <h2 style="color:blue">Date de fin</h2>
+            <input type="datetime-local" name="endDate" id="endDate"  class="form-control total" /></article>
+        <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <h2 style="color:blue">Voir</h2>
+                <input type="submit" name="submit" id="btnCreatePieChart" value="Voir"  class="btn btn-info"/>  
+        </article>
+    </div> 
+ }  
+</p>
+      <div style="color:blue"><h1> @ViewBag.mot</h1></div>
        <div class="table-responsive">
+           
         <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
            <thead>
                <tr style="background-color:darkturquoise">
                     <th>NO</th>
                     <th>NOM</th>
-                    <th>MEMBRE</th>
+                    <th>QUANTITE</th>
+                   <th>OPTIONS</th>
               </tr>
            </thead>
             <tbody>
@@ -65,9 +91,12 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.count)
                 </td>
+                <td>
+                     @Html.ActionLink("Detail", "Details", new { id = item.ID }, new { @class = "btn btn-sm btn-info" })
+                </td>
                    
             </tr>
-                }
+        }
             </tbody>
         </table></div>
    </div>
@@ -75,7 +104,8 @@
  </div>
 @section scripts
 {
-    <script src="~/Scripts/chartAssociationQuantite.js"></script>
+    <script src="~/Scripts/chartAssociationQuantit.js"></script>
+   
     <script src="~/Scripts/tableau1.js"></script>
 }
 
