--- a/TEMPLATE/Views/Association/Indexe.cshtml
+++ b/TEMPLATE/Views/Association/Indexe.cshtml
@@ -11,7 +11,7 @@
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
              <div>
               <h2 class="text-white pb-2 fw-bold">
-                Association
+                Les associations @ViewBag.nomprovince
             </h2>
         </div>
         <div class="ml-md-auto py-2 py-md-0">
@@ -22,7 +22,7 @@
                   <a href="#">Home</a>
               </li>
               <li class="breadcrumb-item">
-                <a href="#">Association</a>
+                <a href="#">Associations</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
               Liste 
@@ -37,17 +37,17 @@
  <div class="card-body rec-pat"> 
         @{
             IEnumerable<TEMPLATE.Models.recoltModel> associations = ViewData["association"] as IEnumerable<TEMPLATE.Models.recoltModel>;
-            IEnumerable<TEMPLATE.Models.historique_asscociation> historiques = ViewData["historique"] as IEnumerable<TEMPLATE.Models.historique_asscociation>;
+            IEnumerable<TEMPLATE.Models.recoltModel> historiques = ViewData["historique"] as IEnumerable<TEMPLATE.Models.recoltModel>;
         }
         @{
             List<int> IDassocition = new List<int>();
         }
-        @foreach (TEMPLATE.Models.historique_asscociation iteme in historiques)
+        @foreach (TEMPLATE.Models.recoltModel iteme in historiques)
         {
-            IDassocition.Add(iteme.ID_association);
+            IDassocition.Add(iteme.ID);
         }
         <div class="container-fluid">
-             <H1 style="color:blue">AFFICHER PAR:</H1>
+             
               <div class="container-fluid " >  
                    @using (Html.BeginForm("Indexe", "Association", FormMethod.Post))
                    {
@@ -56,11 +56,8 @@
                                 <h2 style="color:blue">Provinces</h2>
                                 @Html.DropDownList("ID_provinceActifs", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })      
                             </article>
-                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4"> 
-                                <h2 style="color:blue">Communes </h2>
-                                @Html.DropDownList("ID_communeActifs", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })     
-                            </article>
-                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                            
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
                                 <h2 style="color:blue">Afficher</h2>
                                  <input type="submit" name="submit" value="Affiche"  class="btn btn-info"/>  
                             </article>
@@ -72,7 +69,7 @@
              <div class="table-responsive" style="margin-top:40px">
              <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
                 <thead>
-                <tr style="background-color:darkturquoise">
+                <tr style="background-color:blue">
                     <th>NO</th>
                     <th>NOM </th>
                     <th>TEL</th>
@@ -91,7 +88,7 @@
                 {
                     
 
-                    if (IDassocition.Contains(item.ID_association) != true)
+                    if (IDassocition.Contains(item.ID) != true)
                     {
                         NO++;
                         <tr>
@@ -148,7 +145,7 @@
            </div> 
 
     </div>
- </div>
+
      @section scripts
     {
     <script src="~/Scripts/tables1.js"></script>
