--- a/TEMPLATE/Views/Association/Delete.cshtml
+++ b/TEMPLATE/Views/Association/Delete.cshtml
@@ -1,18 +1,41 @@
 ﻿@model TEMPLATE.Models.association
 
-@{
-    ViewBag.Title = "Delete";
+ @{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Layouts/_Default.cshtml";
 }
-
-
-
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>association</legend>
-
-    <div class="display-label">
+<div class="main-panel">
+    <div class="container">
+    <div class="panel-header bg-primary-gradient">
+	    <div class="page-inner py-5">
+		    <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
+			    <div>
+				    <h2 class="text-white pb-2 fw-bold">Association</h2>
+			    </div>
+			    <div class="ml-md-auto py-2 py-md-0">
+			    <!-- PAGE-HEADER -->
+			    <div class="page-header">
+				    <ol class="breadcrumb">
+					    <li class="breadcrumb-item">
+						    <a href="#">Association</a>
+					    </li>
+					    <li class="breadcrumb-item active" aria-current="page">
+						    Ajouter
+					    </li>
+				    </ol>
+			    </div>
+                <!-- PAGE-HEADER END -->
+			    </div>
+		    </div>
+	    </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">     
+            </article>
+            <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#D291BC;margin-top:60px;margin-bottom:4px">
+                <h3>Voulez vous supprimez  cette association définitivement vous risque de perdre plusieurs information ?</h3>
+                <div class="display-label">
          @Html.DisplayNameFor(model => model.ID_association)
     </div>
     <div class="display-field">
@@ -46,10 +69,20 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.DATE_association)
     </div>
-</fieldset>
-@using (Html.BeginForm()) {
-    <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-}
+                @using (Html.BeginForm()) 
+                {
+                    <div class="form-group">
+                        <div class="col-md-offset-4 col-md-10">
+                            <input type="submit" value="Supprime" class="btn btn-danger pull-right" />
+                        </div>
+                    </div>
+                    <p>
+                        @Html.ActionLink("Retour", "Index")
+                    </p>
+               }
+            </article>
+            <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">    
+            </article>
+        </div>
+    </div>
+</div>
