ajout un input de type datetime

--- a/TEMPLATE/Views/Association/Create.cshtml
+++ b/TEMPLATE/Views/Association/Create.cshtml
@@ -43,28 +43,28 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             <div class="col-md-12">
-                            <label> Provinces :</label>
+                            <label> <b style="font-size:20px">Provinces:</b></label>
                             @Html.DropDownList("ID_province", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })
                             </div>
                         </div>
                         <div class="form-group">
                         
                             <div class="col-md-12">
-                                <label> Commune :</label>
+                                <label><b style="font-size:20px">Communes :</b></label>
                             @Html.DropDownList("ID_commune", new SelectList(new List<string>()), "Choisir le commune", htmlAttributes: new { @class = "form-control" })
                             </div>
                             </div>
                         <div class="form-group">
                         
                             <div class="col-md-12">
-                                <label> zone:</label>
+                                <label> <b style="font-size:20px">zones:</b></label>
                             @Html.DropDownList("ID_zone", new SelectList(new List<string>()), "Choisir la zone", htmlAttributes: new { @class = "form-control" })
                             </div>
                             </div>
                         <div class="form-group">
                         
                             <div class="col-md-12">
-                            <label> colline:</label>
+                            <label> <b style="font-size:20px">collines:</b></label>
                             @Html.DropDownList("ID_colline", new SelectList(new List<string>()), "Choisir colline", htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.ID_colline, "", new { @class = "text-danger" })
                             </div>
@@ -72,28 +72,28 @@
 
                         <div class="form-group">
                             <div class="col-md-12"  >
-                                <label>Nom</label>
+                                <label><b style="font-size:20px">Nom:</b></label>
                                 @Html.TextBoxFor(model => model.NOM_association, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.NOM_association)
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-md-12"  >
-                                <label>Tel</label>
+                                <label><b style="font-size:20px">Tel:</b></label>
                                 @Html.TextBoxFor(model => model.TEL_association, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.TEL_association)
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-md-12"  >
-                                <label>Date de creation</label>
-                                    @Html.TextBoxFor(model => model.DATE_association, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.DATE_association)
-                            </div>
-                        </div>
+                      <div class="form-group">
+                          <div class="col-md-12">
+                            <label><b style="font-size:20px">Date:</b></label>
+                              <input type="datetime-local" name="DATE_association" class="form-control total " />
+                            
+                          </div>
+                       </div>
                         <div class="form-group">
                             <div class="col-md-offset-4 col-md-10">
-                                <input type="submit" value="Create" class="btn btn-success pull-right" />
+                                <input type="submit" value="Enregistrer" class="btn btn-success pull-right " />
                             </div>
                         </div>
                     </div>
