ajout un fa fa dashboard

--- a/TEMPLATE/Views/Partials/_SidebarMenu.cshtml
+++ b/TEMPLATE/Views/Partials/_SidebarMenu.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
     ViewBag.Title = "_SidebarMenu";
 }
-<div class="sidebar sidebar-style-2" style="background-color:#2B0341">			
+@*darkslategrey*@
+<div class="sidebar sidebar-style-2" style="background-color:darkslategrey;color:white">			
 <div class="sidebar-wrapper scrollbar scrollbar-inner">
 	<div class="sidebar-content">
 		<div class="user">
@@ -23,40 +24,36 @@
             <li class="nav-item  @(pageName == "Dashboard" ? "active" : "")">
                 <a href="@Url.Action("Index","Dashboard")">
                     <i class="fa fa-dashboard"style="font-size:24px;color:blue"></i>
-                    <p>Dashboard</p>
+                    <p  style="color:white">Dashboard</p>
                 </a>
             </li>
             <li class="nav-item  @(pageName == "association"||pageName == "HistoriqueAssoction" ? "active" : "")">
                 <a data-toggle="collapse" href="#forms">
                     <i class="fas fa-users"style="font-size:24px;color:blue"></i>
-                    <p>Associations</p>
+                    <p  style="color:white">Associations</p>
                     <span class="caret"></span>
                 </a>
                 <div class="collapse" id="forms">
                     <ul class="nav nav-collapse">
-                        <li>
-                            <a href="@Url.Action("Index","association")">
-                                <span class="sub-item">Tous les deux</span>
-                            </a>
-                        </li>
+                        
                         <li>
                             <a href="@Url.Action("Indexe","association")">
-                                <span class="sub-item">Associations actifs</span>
+                                <span class="sub-item" style="color:white">Associations actifs</span>
                             </a>
                         </li>
                         <li>
                             <a href="@Url.Action("Index","HistoriqueAssoction")">
-                                <span class="sub-item">Associations inactifs</span>
+                                <span class="sub-item" style="color:white">Associations inactifs</span>
                             </a>
                         </li>
                         <li>
                             <a href="@Url.Action("RapportQuantite","association")">
-                                <span class="sub-item">Rapport de quantite par chaque associations</span>
+                                <span class="sub-item" style="color:white">Rapport de quantite par chaque associations</span>
                             </a>
                         </li>
                          <li>
                             <a href="@Url.Action("RapportClient","association")">
-                                <span class="sub-item">Rapport de membre  par chaque associations</span>
+                                <span class="sub-item" style="color:white">Rapport de membre  par chaque associations</span>
                             </a>
                         </li>
                     </ul>
@@ -66,40 +63,36 @@
                 <a href="@Url.Action("Index","client")">
                     <i class="fa fa-female"style="font-size:36px;color:blue"></i>
 
-                    <p>Clients</p>
+                    <p  style="color:white">Membres</p>
                 </a>
             </li>
             <li class="nav-item  @(pageName == "StationLavage"||pageName == "historiqueStation" ? "active" : "")">       
                 <a data-toggle="collapse" href="#collapseExample">
                     <i class="fa fa-university" style="font-size:30px;color:blue"></i>
-                    <p>Stations de lavage</p>
+                    <p  style="color:white">Stations de lavage</p>
                     <span class="caret"></span>
                 </a>
                 <div class="collapse" id="collapseExample">
                     <ul class="nav nav-collapse">
-                        <li>
-                            <a href="@Url.Action("Index","StationLavage")">
-                                <span class="sub-item">Tous les deux</span>
-                            </a>
-                        </li>
+                       
                         <li>
                             <a href="@Url.Action("Indexe","StationLavage")">
-                                <span class="sub-item">Stations de lavage actifs</span>
+                                <span class="sub-item" style="color:white">Stations de lavage actifs</span>
                             </a>
                         </li>
                         <li>
                             <a href="@Url.Action("Index","historiqueStation")">
-                                <span class="sub-item">Stations de lavage inactifs</span>
+                                <span class="sub-item" style="color:white">Stations de lavage inactifs</span>
                             </a>
                         </li>
                          <li>
                             <a href="@Url.Action("RapportQuantite","StationLavage")">
-                                <span class="sub-item">Rapport de quantite par chaque station de lavage</span>
+                                <span class="sub-item" style="color:white">Rapport de quantite par chaque station de lavage</span>
                             </a>
                         </li>
                          <li>
                             <a href="@Url.Action("RapportClient","StationLavage")">
-                                <span class="sub-item">Rapport de membre  par chaque station de lavage</span>
+                                <span class="sub-item " style="color:white">Rapport de membre  par chaque station de lavage</span>
                             </a>
                         </li>
                         
@@ -108,31 +101,37 @@
             </li>
 
             <li class="nav-item  @(pageName == "recolte" ? "active" : "")">
-
                 <a href="@Url.Action("Index","recolte")">
                     <i class="fa fa-balance-scale" style="font-size:24px;color:blue"></i>
-                    <p>Recoltes</p>
+                    <p  style="color:white">Recoltes</p>
                 </a>
             </li>
 
-            <li class="nav-item  @(pageName == "EmployeAssociation"||pageName == "EmployeStation" ? "active" : "")">
+            <li class="nav-item  @(pageName == "EmployeAssociation"||pageName == "EmployeStation"||pageName == "HistoriqueUtilisateur" ? "active" : "")">
                 <a data-toggle="collapse" href="#tables">
                     <i class="fas fa-people-carry"style="font-size:30px;color:blue"></i>
-                    <p>Employes</p>
+                    <p  style="color:white">Employes</p>
                     <span class="caret"></span>
                 </a>
                 <div class="collapse" id="tables">
                     <ul class="nav nav-collapse">
                         <li >
                             <a href="@Url.Action("Index","EmployeAssociation")">
-                                <span class="sub-item">Employes des associtions</span>
+                                <span class="sub-item" style="color:white">Employes des associtions actifs</span>
                             </a>
                         </li>
-                        <li>
+                        <li >
+                            <a href="@Url.Action("Index","HistoriqueUtilisateur")">
+                                <span class="sub-item" style="color:white">Employes des associtions et des station de lavage inactifs</span>
+                            </a>
+                        </li>
+                        
+                         <li>
                             <a href="@Url.Action("Index","EmployeStation")">
-                                <span class="sub-item">Employes des station de lavage</span>
+                                <span class="sub-item" style="color:white">Employes des station de lavage actifs</span>
                             </a>
                         </li>
+                         
                     </ul>
                 </div>
             </li>
@@ -140,59 +139,59 @@
             <li class="nav-item  @(pageName == "qualite" ? "active" : "")">
                 <a href="@Url.Action("Index","qualite")">
                     <i class="fas fa-gifts"style="font-size:24px;color:blue"></i>
-                    <p>Qualite</p>
+                    <p  style="color:white" >Qualite</p>
                 </a>
             </li>
             <li class="nav-item  @(pageName == "HistoriquePrix" ? "active" : "")">
                 <a href="@Url.Action("Index","HistoriquePrix")">
                    <i class="fas fa-ruler-vertical" style="font-size:24px;color:blue"></i>
-                    <p>Prix</p>
+                    <p  style="color:white">Prix</p>
                 </a>
             </li>
             <li class="nav-item  @(pageName == "Utilisateur" ? "active" : "")">
                 <a href="@Url.Action("Index","Utilisateur")">
                     <i class="fa fa-user" style="font-size:24px;color:blue"></i>
-                    <p>Utilisateurs</p>
+                    <p  style="color:white">Utilisateurs</p>
                 </a>
             </li>
             <li class="nav-item  @(pageName == "Profiles" ? "active" : "")">
                 <a href="@Url.Action("Index","Profiles")">
                     <i class="fas fa-info-circle"style="font-size:30px;color:blue"></i>
-                    <p>Profile</p>
+                    <p  style="color:white">Profile</p>
                 </a>
             </li>
              <li class="nav-item  @(pageName == "Province" ? "active" : "")">
 
                 <a href="@Url.Action("Index","Province")">
                     <i class="fas fa-home"style="font-size:30px;color:blue"></i>
-                    <p>Provinces</p>
+                    <p  style="color:white">Provinces</p>
                 </a>
             </li>
              <li class="nav-item  @(pageName == "Commune" ? "active" : "")">
 
                 <a href="@Url.Action("Index","Commune")">
                     <i class="fas fa-home"style="font-size:28px;color:blue"></i>
-                    <p>Communes</p>
+                    <p  style="color:white">Communes</p>
                 </a>
             </li>
              <li class="nav-item  @(pageName == "Zone" ? "active" : "")">
 
                 <a href="@Url.Action("Index","Zone")">
                     <i class="fas fa-home"style="font-size:26px;color:blue"></i>
-                    <p>Zones</p>
+                   <p  style="color:white">Zones</p>
                 </a>
             </li>
              <li class="nav-item  @(pageName == "Colline" ? "active" : "")">
 
                 <a href="@Url.Action("Index","Colline")">
                     <i class="fas fa-home"style="font-size:24px;color:blue"></i>
-                    <p>Collines</p>
+                    <p  style="color:white">Collines</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="@Url.Action("Logout","Dashboard")">
                     <i class="fas fa-power-off" style="font-size:24px;color:red"></i>
-                    <p> Se déconnecter</p>
+                    <p  style="color:red">Se déconnecter</p>
                 </a>
             </li>
         </ul>  
