--- a/TEMPLATE/Views/Layouts/_DefaultStation.cshtml
+++ b/TEMPLATE/Views/Layouts/_DefaultStation.cshtml
@@ -12,7 +12,32 @@
     @RenderPage("~/Views/Partials/_SidebarMenuStation.cshtml") 
     @RenderPage("~/Views/Partials/_Footer.cshtml")  
     @RenderSection("scripts", required: false)
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script>
+
+        var sms = "@((string)ViewBag.Messag)";
+        if (sms !== null && sms !== '') {
+            swal({
+                title: "Bienvenue!!!!!!!!!!",
+                text: sms,
+                icon: "success",
+                button: true,
+                timer: 5000
+            });
+        }
+        var sms1 = "@((string)ViewBag.Messag1)";
+        if (sms1 !== null && sms1 !== '') {
+            swal({
+                title: "Reussi!!!",
+                text: sms1,
+                icon: "success",
+                button: false,
+                timer: 5000
+            });
+        }
+    </script>
+
+    @*<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdn.datatables.net/buttons/1.6.2/js/dataTables.buttons.min.js"></script>  
     <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.bootstrap4.min.js"></script>  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>  
@@ -20,7 +45,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>  
     <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.html5.min.js"></script>  
     <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.print.min.js"></script>  
-    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.colVis.min.js"></script> 
+    <script src="https://cdn.datatables.net/buttons/1.6.2/js/buttons.colVis.min.js"></script> *@
     
 </body>
 </html>
