--- a/TEMPLATE/Views/HistoriqueStation/Create.cshtml
+++ b/TEMPLATE/Views/HistoriqueStation/Create.cshtml
@@ -9,17 +9,17 @@
 	    <div class="page-inner py-5">
 		    <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
 			    <div>
-				    <h2 class="text-white pb-2 fw-bold">Association</h2>
+				    <h2 class="text-white pb-2 fw-bold">Les stations de lavage inactifs</h2>
 			    </div>
 			    <div class="ml-md-auto py-2 py-md-0">
 			    <!-- PAGE-HEADER -->
 			    <div class="page-header">
 				    <ol class="breadcrumb">
 					    <li class="breadcrumb-item">
-						    <a href="#">Association</a>
+						    <a href="#">Les stations de lavage inactifs</a>
 					    </li>
 					    <li class="breadcrumb-item active" aria-current="page">
-						    Ajouter
+						    Désactiver
 					    </li>
 				    </ol>
 			    </div>
@@ -28,36 +28,37 @@
 		    </div>
 	    </div>
     </div>
-    <div class="container-fluid" style="background-color:moccasin">
+    <div class="container-fluid" >
         <div class="row">
             <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">     
+                <a href="@Url.Action("Index","HistoriqueStation")" class=" btn btn-sm  btn-outline-info pull-left  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-arrow-left mr-2"></i>Retour</a>
+           
             </article>
-            <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#D291BC;margin-top:4px;margin-bottom:4px">
-                @using (Html.BeginForm())
+            <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#016ce9;margin-top:4px;margin-bottom:4px">
+             @using (Html.BeginForm())
                 {
                     @Html.AntiForgeryToken()
                     <div class="bg-light border  margin-top">
                     <div class="form-horizontal  "   >
-                        <h4 style="text-align:center ;color:blue">Désactiver une station de lavage</h4>
+                        <h4 style="text-align:center ;background-color:#016ce9;color:white"> DESACTIVER UNE STATION DE LAVAGE</h4>
                         <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                        <div class="form-group">     
                             <div class="col-md-12"  >
-                              <label>Station</label>
-                              @Html.DropDownList("ID_station", null, "Choisir la station ", htmlAttributes: new { @class = "form-control " })
+                              <label><b style="font-size:20px">Station</label>
+                              @Html.DropDownList("ID_station", null, "Choisir une station de lavage  ", htmlAttributes: new { @class = "form-control " })
                               @Html.ValidationMessageFor(model => model.ID_station, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-md-12"  >
-                                <label>Date de creation</label>
-                                    @Html.TextBoxFor(model => model.DATE_desactive, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.DATE_desactive)
-                            </div>
+                                <label><b style="font-size:20px">Date de désactivation :</b></label>
+                             <input type="datetime-local" name="DATE_desactive" class="form-control total" />
+                           </div>
                         </div>
                         <div class="form-group">
                             <div class="col-md-offset-4 col-md-10">
-                                <input type="submit" value="Create" class="btn btn-success pull-right" />
+                                <input type="submit" value="Enregistrer" class="btn btn-info pull-right" />
                             </div>
                         </div>
                     </div>
