--- a/TEMPLATE/Views/EmployeAssociation/Delete.cshtml
+++ b/TEMPLATE/Views/EmployeAssociation/Delete.cshtml
@@ -19,7 +19,7 @@
 						    <a href="#">Les empolyes des associations</a>
 					    </li>
 					    <li class="breadcrumb-item active" aria-current="page">
-						    Suppression
+						    Supprimer
 					    </li>
 				    </ol>
 			    </div>
@@ -31,7 +31,9 @@
     <div class="container-fluid" style="background-color:moccasin">
         <div class="row">
             <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">     
-            </article>
+            <a href="@Url.Action("Index","EmployeAssociation")" class=" btn btn-sm  btn-outline-info pull-left  " style="margin-top:5px; margin-bottom:5px"><i class="fa fa-arrow-left mr-2"></i>Retour</a>
+            
+                 </article>
             <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#D291BC;margin-top:4px;margin-bottom:4px">
                 <h3>Voulez vous active cette employes ?</h3>
                 <fieldset>
@@ -96,7 +98,7 @@
                 {
                     <div class="form-group">
                         <div class="col-md-offset-4 col-md-10">
-                            <input type="submit" value="Supprimer" class="btn btn-danger pull-right" />
+                            <input type="submit" value="Active" class="btn btn-danger pull-right" />
                         </div>
                     </div>
                     <p>
